// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "Show More" link 1`] = `
<div>
  <ul
    className="menu"
    key="header-TRK"
  >
    <li
      className="menu-header"
      role="presentation"
    >
      qualifiers.TRK
    </li>
    <span
      key="foo"
    >
      foo
    </span>
    <span
      key="bar"
    >
      bar
    </span>
    <SearchShowMore
      allowMore={true}
      key="more-TRK"
      onMoreClick={[MockFunction]}
      onSelect={[MockFunction]}
      qualifier="TRK"
      selected={false}
    />
  </ul>
</div>
`;

exports[`renders different components and dividers between them 1`] = `
<div>
  <ul
    className="menu"
    key="header-FIL"
  >
    <li
      className="menu-header"
      role="presentation"
    >
      qualifiers.FIL
    </li>
    <span
      key="zux"
    >
      zux
    </span>
  </ul>
  <ul
    className="menu"
    key="header-TRK"
  >
    <li
      className="menu-header"
      role="presentation"
    >
      qualifiers.TRK
    </li>
    <span
      key="foo"
    >
      foo
    </span>
    <span
      key="bar"
    >
      bar
    </span>
  </ul>
</div>
`;

exports[`should render no results 1`] = `
<div
  id="no-results"
/>
`;
